typeway-macros/tests/handler/fail_not_async.stderr
error: handler functions must be async
 --> tests/handler/fail_not_async.rs:4:1
  |
4 | fn not_async() -> &'static str {
  | ^^
