typeway-macros/tests/handler/fail_not_async.rs
use typeway_macros::handler;

#[handler]
fn not_async() -> &'static str {
    "hello"
}

fn main() {}
